<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/welcome"
        android:textColor="@color/mainMagenta"
        android:textSize="@dimen/_25sdp">

    </TextView>

    <TextView
        android:id="@+id/tv_sub_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_welcome"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/din_pro_medium"
        android:text="@string/welcome_sub"
        android:textColor="@color/blackSub"
        android:textSize="@dimen/_14sdp">

    </TextView>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_sub_welcome"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:fontFamily="@font/din_pro_bold"
        android:text="@string/login"
        android:textColor="@color/blackSub"
        android:textSize="@dimen/_25sdp">

    </TextView>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_toStartOf="@+id/inputLayout"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/mail"
        android:visibility="gone">

    </ImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_below="@+id/tv_login"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@color/white"
        android:hint="@string/email_address"
        android:textColorHint="@color/blackSub"
        android:visibility="gone"
        app:boxStrokeColor="@color/blackSub"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:hintTextColor="@color/blackSub">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="@dimen/_20sdp"
            android:fontFamily="@font/din_pro_medium"
            android:paddingTop="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            app:startIconDrawable="@drawable/mail"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/lv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputLayout">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@color/white"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/din_pro_regular"
            android:text="@string/email_address_star"
            android:textColorHint="@color/blackSub"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/tv_email"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/din_pro_medium"
            android:theme="@style/EditTextTheme"
            android:hint="@string/email_address_"
            android:text=""
            android:textColor="@color/blackSub"
            android:textSize="@dimen/_14sdp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lv_username">

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@color/white"
            android:drawableStart="@drawable/key"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/din_pro_regular"
            android:text="@string/password_star"
            android:textColorHint="@color/blackSub"
            android:textSize="@dimen/_14sdp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_password">

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/din_pro_medium"
                android:theme="@style/EditTextTheme"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text=""
                android:textColor="@color/blackSub"
                android:textSize="@dimen/_14sdp"/>

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ed_password"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/din_pro_medium"
                android:padding="@dimen/_7sdp"
                android:text="@string/forgotpassword"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"/>

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_forgot_password"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/bottom_background"
                android:fontFamily="@font/din_pro_bold"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"/>

            <TextView
                android:id="@+id/tv_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bt_login"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/din_pro_bold"
                android:gravity="center_horizontal"
                android:text="@string/continue_txt"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"/>

            <RelativeLayout
                android:id="@+id/rv_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_continue"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_facebook"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/facebook">

                </ImageView>

                <ImageView
                    android:id="@+id/iv_google"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_toEndOf="@+id/iv_facebook"
                    android:src="@drawable/google__2_">

                </ImageView>

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rv_continue"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/din_pro_bold"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/account_text"
                android:textColor="@color/mainMagenta"
                android:textSize="@dimen/_10sdp"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>